--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
+    "cucumber": "^6.0.5",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
@@ -45,6 +46,7 @@
     "karma-jasmine-html-reporter": "^1.4.0",
     "lodash": "^4.17.15",
     "protractor": "~5.4.0",
+    "protractor-cucumber-framework": "^6.2.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.5.3"
