--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
     "@angular/platform-browser": "~8.2.0",
     "@angular/platform-browser-dynamic": "~8.2.0",
     "@angular/router": "~8.2.0",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "cucumber": "^6.0.5",
     "font-awesome": "^4.7.0",
     "primeicons": "^2.0.0",
     "primeng": "^8.0.2",
+    "protractor-cucumber-framework": "^6.2.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
